syntax = "proto3";

import "scalapb/scalapb.proto";

option java_multiple_files = true;
option java_package = "quizzly.school.grpc";

package quizzlyschool;

service SchoolRegistry {
  rpc RegisterQuiz (RegisterQuizRequest) returns (RegisterQuizResponse);
  rpc RegisterTrialResults (RegisterTrialResultsRequest) returns (RegisterTrialResultsResponse);
  rpc SetQuizObsolete (SetObsoleteRequest) returns (SetObsoleteResponse);
}

message RegisterQuizRequest {
  string id = 1;
  string title = 2;
  string intro = 3;
  int32 recommendedTrialLength = 4;
  Person curator = 5 [(scalapb.field).no_box = true];
  repeated Person authors = 6;
  repeated Person inspectors = 7;
  repeated Section sections = 8;
}

message Person {
  string id = 1;
  string name = 2;
}

message Item {
  string sc = 1;
  string intro = 2;
  Statement definition = 3 [(scalapb.field).no_box = true];
  repeated Hint hints = 4;
  bool hintsVisible = 5;
  repeated int32 solutions = 6;
}

message Statement {
  string text = 1;
  optional string image = 2;
}

message Hint {
  repeated Statement alts = 1;
}

message Section {
  string sc = 1;
  string title = 2;
  string intro = 3;
  repeated Item items = 4;
}

message RegisterQuizResponse {}

message RegisterTrialResultsRequest {
  string examId = 1;
  string testeeId = 2;
  string trialId = 3;
  int64 start = 4;
  int64 end = 5;
  repeated Solution solutions = 6;
}

message RegisterTrialResultsResponse {}

message Solution {
  string sectionSc = 1;
  string itemSc = 2;
  repeated string answers = 3;
}

message SetObsoleteRequest {
  string quizId = 1;
}

message SetObsoleteResponse {}
